# humapy

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  KUTUPHANELER.md  LICENSE  README.en.md  README.md  SOZDIZIMI.md  YENI_SOZ_DIZIMI.md  debug_test.hb  h.out  h2.out  huma.py  install.sh  kutuphane_test.hb  main.hb  merhaba_dunya  merhaba_dunya.rs  program.hb  shell.py  sinif_test.hb  str_wtg_ar.py  test.hbc  test_comp.hb  test_debug_lib.hb  test_esitlik.hb  test_func_ret.hb  test_headers.hb  test_iceriyor.hb  test_list2.hb  test_mimari.hb  test_ort.hb  test_simple.hb  test_sunucu.hb  test_unluler.hb  test_unluler_v3.hb  test_uzunluk.hb  uygulama  uygulama.rs  (+2 more)
.github/workflows/: cut-release.yml  release.yml
crates/huma-cli/: Cargo.toml
crates/huma-cli/src/: commands.rs  main.rs  package_manager.rs  updater.rs
crates/huma-compiler/: Cargo.toml
crates/huma-compiler/src/: codegen.rs  lib.rs  pipeline.rs
crates/huma-core/: Cargo.toml
crates/huma-core/src/: ast.rs  builtin_files.rs  error.rs  gui.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
examples/: check_type.hb  debug_heceleme.hb  fibonacci.hb  gui_bmi.hb  gui_currency.hb  gui_demo.hb  gui_notepad.hb  gui_stats.hb  gui_stopwatch.hb  gui_todo.hb  haber_analiz.hb  heceleme.hb  merhaba.hb  nlp_demo.hb  nlp_hizli_test.hb  simple_test.hb  uygulama_gorevler.hb  uygulama_log_analiz.hb  uygulama_tahmin.hb
huma_kutuphaneleri/: .gitignore  huma.json  huma_kutuphaneleri.hb  kutuphaneler.json  template_admin.html  template_ekle.html  template_index.html
huma_modulleri/huma_sunucu/: huma.json  huma_sunucu.hb
huma_modulleri/nlp_temel/: nlp_temel.hb  paket.json
huma_todo_sunucu/: huma.json  huma_todo_sunucu.hb  index.html  veriler.json
ide/: index.html  package-lock.json  package.json  server.js  vite.config.js
ide/public/: index.html
ide/src/: App.jsx  index.css  main.jsx
ide/src/components/: ContextMenu.jsx  EditorArea.jsx  InputModal.jsx  Sidebar.jsx  TerminalPanel.jsx  Topbar.jsx
kütüphaneler/: matematik.hb
lib/: birim_test.hb  dizgi.hb  dosya.hb  gui.hb  istatistik.hb  liste.hb  matematik.hb  nlp.hb  rastgele.hb  renkler.hb  zaman.hb
release_binaries/: huma-ide_0.2.0_amd64.deb  huma-linux-amd64
src/: ast.rs  builtin_files.rs  bytecode.rs  cli.rs  compiler.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  value.rs  vm.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test_api/: huma.json  test_api.hb
test_kurulum/: huma.json  test_kurulum.hb
tests/: debug_dizgi.hb  debug_testfile.rs  gelismis_test.hb  integration_tests.rs  kutuphane_test.hb  nlp_ornek.hb  test_derle.hb  test_faktoriyel.hb  test_gunlugu.txt  test_liste_dongu.hb  test_mimari.hb  test_sinif.hb  test_turkce.hb  v040_dogrulama.hb
tests/other/: test_iceriyor_simple.hb  test_index.hb  test_ne.hb  test_simple.hb  test_truthy.hb  test_unluler_v2.hb  test_unluler_v4.hb
vscode-huma/: language-configuration.json  package.json
vscode-huma/syntaxes/: huma.tmLanguage.json
www/: desing-template.html
www/site/: middleware.ts  package-lock.json  package.json
www/site/app/: globals.css  layout.tsx  metadata.ts  page.tsx
www/site/app/[locale]/: layout.tsx  page.tsx
www/site/app/[locale]/community/: page.tsx
www/site/app/[locale]/docs/: layout.tsx  page.tsx
www/site/app/[locale]/docs/ag_istekleri/: page.tsx
www/site/app/[locale]/docs/changelog/: page.tsx
www/site/app/[locale]/docs/compiler/: page.tsx
www/site/app/[locale]/docs/functions-classes/: page.tsx
www/site/app/[locale]/docs/gui/: page.tsx
www/site/app/[locale]/docs/huma_sunucu/: page.tsx
www/site/app/[locale]/docs/ide/: page.tsx
www/site/app/[locale]/docs/introduction/: page.tsx
www/site/app/[locale]/docs/lists-errors/: page.tsx
www/site/app/[locale]/docs/my-first-package/: page.tsx
www/site/app/[locale]/docs/package-manager/: page.tsx
www/site/app/[locale]/docs/stdlib/: page.tsx
www/site/app/[locale]/docs/syntax/: page.tsx
www/site/app/[locale]/ide/: page.tsx
www/site/app/[locale]/playground/: PlaygroundClient.tsx  page.tsx
www/site/app/community/: page.tsx
www/site/app/docs/: layout.tsx  page.tsx
www/site/app/docs/functions-classes/: page.tsx
www/site/app/docs/lists-errors/: page.tsx
www/site/app/ide/: page.tsx
www/site/app/playground/: page.tsx
www/site/components/: CodeBlock.tsx  HomeClient.tsx  LanguageSwitcher.tsx  Navbar.tsx  Sidebar.tsx
www/site/dictionaries/: dictionaries.ts  en.json  tr.json
