[package]
name = "huma"
version = "0.2.0"
description = "A high-performance, safe, and intuitive programming language with Turkish syntax, featuring a bytecode VM."
authors = ["VastSea0 <vastseaoffical0@outlook.com>"]
license = "MIT"
edition = "2024"
default-run = "huma"
[lib]
name = "huma"
path = "src/lib.rs"

[[bin]]
name = "huma"
path = "src/main.rs"

[[bin]]
name = "ide"
path = "src/bin/ide.rs"

[[bin]]
name = "debug_parse"
path = "src/bin/debug_parse.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
