[package]
name = "huma-ide"
version = "0.1.0"
description = "Hüma Desktop IDE"
authors = ["VastSea0"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "system-tray", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# default enables signaling the welcome screen
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
