[package]
name = "huma-cli"
version = "0.3.0"
description = "Unified CLI entry point for the Hüma programming language — build, run, REPL, update."
authors = ["VastSea0 <vastseaoffical0@outlook.com>"]
license = "MIT"
edition = "2021"
default-run = "huma"

[[bin]]
name = "huma"
path = "src/main.rs"

[dependencies]
huma-core = { path = "../huma-core" }
huma-compiler = { path = "../huma-compiler" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2"] }
indicatif = "0.17"
colored = "2"
