[package]
name = "huma-compiler"
version = "0.3.0"
description = "Hüma bytecode compiler and binary code-generation utilities."
authors = ["VastSea0 <vastseaoffical0@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
huma-core = { path = "../huma-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2"
