[package]
name = "huma-core"
version = "0.3.1"
description = "Core language primitives for Hüma: tokens, AST, lexer, parser, values, bytecode, VM, and interpreter."
authors = ["VastSea0 <vastseaoffical0@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2"
eframe = "0.27"
once_cell = "1.19"
